--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='main.css') }}"></script>
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
 
     <!-- Toast container -->
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
