--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <main class="container-fluid px-4">
+    <main class="container px-4">
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
         <div class="position-sticky top-0 z-3" style="max-width: 800px; margin: 0 auto;">
