--- a/templates/base.html
+++ b/templates/base.html
@@ -52,11 +52,11 @@
             </a>
             <a href="/fixed-collections"
                 class="sidebar-link {% if request.path.startswith('/fixed-collections') %}bg-primary text-white{% endif %}">
-                <i class="bi bi-wallet2"></i> Collections Tracker
+                <i class="bi bi-wallet2"></i> Collections
             </a>
             <a href="/bills"
                 class="sidebar-link {% if request.path.startswith('/bills') %}bg-primary text-white{% endif %}">
-                <i class="bi bi-file-earmark-text"></i> Fixed Bills
+                <i class="bi bi-file-earmark-text"></i> Fixed Expenses
             </a>
             <a href="/settings"
                 class="sidebar-link {% if request.path.startswith('/settings') %}bg-primary text-white{% endif %}">
